--- a/layouts/partials/page-dates.html
+++ b/layouts/partials/page-dates.html
@@ -3,7 +3,7 @@
     <strong>Created:</strong> <span title="{{ .UTC.Format "January 02, 2006 - 15:04 MST" }}">{{ .Local.Format "January 02, 2006 - 15:04 MST" }}</span>
     <br/>
     {{- end }}
-    {{- if gt and .Date (gt (sub .Lastmod.Unix .Date.Unix) 300) }}
+    {{- if and .Date (gt (sub .Lastmod.Unix .Date.Unix) 300) }}
     <strong>Updated:</strong> <span title="{{ .Lastmod.UTC.Format "January 02, 2006 - 15:04 MST" }}">{{ .Lastmod.Local.Format "January 02, 2006 - 15:04 MST" }}</span>
     {{- end }}
 </div>
