Insert page dates at beginning of all simple pages

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,7 @@
 {{ define "main"}}
 
+{{- partial "page-dates.html" . }}
+
 <article class="w3-container w3-content">
     <header>
         <h1>{{ .Title }}</h1>
