--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,3 @@
-<footer class="footer">
-    &copy; IVOA.net {{ now.Format "2006"}}
+<footer>
+    &copy; IVOA.net. Contact the <a href="mailto:ivoadoc@ivoa.net">IVOA Webmaster</a>
 </footer>
