--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,10 +1,13 @@
-<nav class="header">
-
-    <a class="header-title" href="{{ .Site.Home.RelPermalink}}">
-        International Virtual Observatory Alliance
+<header>
+    <a class="header-logo" href="{{ .Site.Home.RelPermalink}}">
+        <img src="/images/ivoa_logo.png">
+        <span>International Virtual<br/>Observatory Alliance</span>
     </a>
-
-    <a href="{{ .Site.Home.RelPermalink}}">
-        <img class="header-logo" src="/images/ivoa_logo.png">
-    </a>
-</nav>
+    <nav>
+        <a href="{{ .Site.Home.Permalink}}">Home</a>
+        <a href="{{ .Site.Home.Permalink}}/pages/astronomers/">Astronomers</a>
+        <a href="{{ .Site.Home.Permalink}}/pages/deployers/">Deployers</a>
+        <a href="{{ .Site.Home.Permalink}}/pages/members/">Members</a>
+        <a href="{{ .Site.Home.Permalink}}/pages/about/">About</a>
+    </nav>
+</header>
