Improve title of footer sections

--- a/layouts/partials/sitemap.html
+++ b/layouts/partials/sitemap.html
@@ -2,7 +2,7 @@
     <div class="cards">
 
         <div class="card">
-            <div class="card-title">About IVOA</div>
+            <div class="card-title">About the IVOA</div>
 
             <div class="card-list">
                 <ul>
@@ -22,7 +22,7 @@
         </div>
 
         <div class="card">
-            <div class="card-title">Astronomers</div>
+            <div class="card-title">For Astronomers</div>
 
             <div class="card-list">
                 <ul>
@@ -37,7 +37,7 @@
         </div>
 
         <div class="card">
-            <div class="card-title">Deployers/Developers</div>
+            <div class="card-title">For Developers</div>
 
             <div class="card-list">
                 <ul>
@@ -50,7 +50,7 @@
         </div>
 
         <div class="card">
-            <div class="card-title">Members section</div>
+            <div class="card-title">For Members</div>
 
             <div class="card-list">
                 <ul>
