Change layout of the carrousel + news section on the home page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,45 +1,40 @@
 {{ define "main" }}
 
-<div class="carrousel">
-    {{ range $elem_index, $elem_val := where .Site.Pages "Params.tags" "intersect" (slice "banner") }}
-    {{ if (eq $elem_index 0)}}
-    <div id="carrousel-{{$elem_index}}" class="carrousel-item active">
-    {{ else }}
-    <div id="carrousel-{{$elem_index}}" class="carrousel-item">
-    {{ end }}
+<section class="with-only-right-aside">
+    <main class="carrousel">
+        {{ range $elem_index, $elem_val := where .Site.Pages "Params.tags" "intersect" (slice "banner") }}
+        {{ if (eq $elem_index 0)}}
+        <div id="carrousel-{{$elem_index}}" class="carrousel-item active">
+        {{ else }}
+        <div id="carrousel-{{$elem_index}}" class="carrousel-item">
+        {{ end }}
 
-        {{ $featured_image := partial "func/GetFeaturedImage.html" . }}
-        <img class="carrousel-img" src="{{ $featured_image }}" />
+            {{ $featured_image := partial "func/GetFeaturedImage.html" . }}
+            <img class="carrousel-img" src="{{ $featured_image }}" />
 
-        <div class="carrousel-title">{{ .Title }}</div>
+            <div class="carrousel-title">{{ .Title }}</div>
 
-        {{ with .Params.author | default .Site.Params.author }}
-        <div class="carrousel-author">{{.}}</div>
-        {{end}}
+            {{ with .Params.author | default .Site.Params.author }}
+            <div class="carrousel-author">{{.}}</div>
+            {{end}}
 
-        <a href="{{ .RelPermalink }}" class="carrousel-action">
-            READ <i class="fa-solid fa-arrow-right"></i>
-        </a>
+            <a href="{{ .RelPermalink }}" class="carrousel-action">
+                READ <i class="fa-solid fa-arrow-right"></i>
+            </a>
 
-    </div>
-    {{ end }}
+        </div>
+        {{ end }}
 
-    <div class="carrousel-btn carrousel-btn-left" id="carrousel-left">
-        <i class="fa-solid fa-chevron-left"></i>
-    </div>
+        <div class="carrousel-btn carrousel-btn-left" id="carrousel-left">
+            <i class="fa-solid fa-chevron-left"></i>
+        </div>
 
-    <div class="carrousel-btn carrousel-btn-right" id="carrousel-right">
-        <i class="fa-solid fa-chevron-right"></i>
-    </div>
-</div>
+        <div class="carrousel-btn carrousel-btn-right" id="carrousel-right">
+            <i class="fa-solid fa-chevron-right"></i>
+        </div>
+    </main>
 
-<!-- rendered content from content/_index.html -->
-<div class="horizontal-blocks">
-    <div>
-    {{- .Content -}}
-    </div>
-
-    <div class="vertical cards">
+    <aside class="right cards">
         <div class="card">
             <div class="card-title">
                 IVOA News & Upcoming Meetings
@@ -53,8 +48,12 @@
             </div>
 
         </div>
+    </aside>
+</section>
 
-    </div>
+<!-- rendered content from content/_index.html -->
+<div>
+{{- .Content -}}
 </div>
 
 {{ end }}
