Prepare links for migration of their page into this prototype website

--- a/layouts/partials/sitemap.html
+++ b/layouts/partials/sitemap.html
@@ -7,16 +7,16 @@
             <div class="card-list">
                 <ul>
                     <li>
-                        <a href="{{ .Site.Home.Permalink}}/pages/about/what_is_vo">
+                        <a href="{{ .Site.Home.Permalink}}/pages/about/what_is_vo/">
                         What is the VO?
                         </a>
                     </li>
-                    <li><a href="https://www.ivoa.net/about/what-is-ivoa.html">What is the IVOA?</a></li>
-                    <li><a href="https://www.ivoa.net/about/member-organizations.html">Who is involved?</a></li>
-                    <li><a href="https://www.ivoa.net/about/roadmap.html">Accomplishments and future plans</a></li>
-                    <li><a href="https://www.ivoa.net/about/contacts.html">How do I contact the IVOA?</a></li>
-                    <li><a href="https://www.ivoa.net/about/participation.html">How can I participate?</a></li>
-                    <li><a href="https://www.ivoa.net/members/IVOA_Code_of_Conduct.pdf">Code of Conduct</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}/pages/about/what-is-ivoa/">What is the IVOA?</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}/pages/about/member-organizations/">Who is involved?</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}/pages/about/roadmap/">Accomplishments and future plans</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}/pages/about/contacts/">How do I contact the IVOA?</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}/pages/about/participation/">How can I participate?</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}/pages/members/IVOA_Code_of_Conduct.pdf">Code of Conduct</a></li>
                 </ul>
             </div>
         </div>
@@ -27,11 +27,11 @@
             <div class="card-list">
                 <ul>
                     <li><a href="{{ .Site.Home.Permalink}}/pages/astronomers/getting_started/">Getting Started</a></li>
-                    <li><a href="https://www.ivoa.net/astronomers/using_the_vo.html">Using the VO</a></li>
-                    <li><a href="https://www.ivoa.net/astronomers/vo_glossary.html">VO Glossary</a></li>
-                    <li><a href="https://www.ivoa.net/astronomers/applications.html">VO Applications</a></li>
-                    <li><a href="https://www.ivoa.net/newsletter/index.html">IVOA newsletter</a></li>
-                    <li><a href="https://www.ivoa.net/astronomers/vo_for_public.html">VO for Students & Public</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}/pages/astronomers/using_the_vo/">Using the VO</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}/pages/astronomers/vo_glossary/">VO Glossary</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}/pages/astronomers/applications/">VO Applications</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}/pages/newsletter/">IVOA newsletter</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}/pages/astronomers/vo_for_public/">VO for Students & Public</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +41,7 @@
 
             <div class="card-list">
                 <ul>
-                    <li><a href="https://www.ivoa.net/deployers/intro_to_vo_concepts.html">Intro to VO Concepts</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}/pages/deployers/intro_to_vo_concepts">Intro to VO Concepts</a></li>
                     <li><a href="https://www.ivoa.net/documents/">IVOA Standards</a></li>
                     <li><a href="http://wiki.ivoa.net/twiki/bin/view/IVOA/PublishingInTheVONew">Guide to Publishing in the VO</a></li>
                     <li><a href="http://wiki.ivoa.net/twiki/bin/view/IVOA/VOGlossary">Technical Glossary</a></li>
@@ -55,11 +55,11 @@
             <div class="card-list">
                 <ul>
                     <li><a href="http://wiki.ivoa.net/twiki/bin/view/IVOA/IvoaEvents">IVOA Calendar</a></li>
-                    <li><a href="https://www.ivoa.net/members/index.html">Working Groups</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}/pages/members/">Working Groups</a></li>
                     <li><a href="http://wiki.ivoa.net/twiki/bin/view/IVOA/WebHome">Twiki</a></li>
                     <li><a href="https://www.ivoa.net/documents/">Documents in Progress</a></li>
-                    <li><a href="https://www.ivoa.net/members/index.html">Mailing Lists</a></li>
-                    <li><a href="https://www.ivoa.net/about/roadmap.html">IVOA Roadmap</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}/pages/members/">Mailing Lists</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}/pages/about/roadmap/">IVOA Roadmap</a></li>
                 </ul>
             </div>
 
