Move all `pages/` content at the root level + Move the newsletter example in the newsletter directory
This way URLs won't be, for instance, `https://ivoa.net/pages/about/` but `https://ivoa.net/about/`.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,9 +5,9 @@
     </a>
     <nav>
         <a href="{{ .Site.Home.Permalink}}">Home</a>
-        <a href="{{ .Site.Home.Permalink}}/pages/astronomers/">Astronomers</a>
-        <a href="{{ .Site.Home.Permalink}}/pages/deployers/">Deployers</a>
-        <a href="{{ .Site.Home.Permalink}}/pages/members/">Members</a>
-        <a href="{{ .Site.Home.Permalink}}/pages/about/">About</a>
+        <a href="{{ .Site.Home.Permalink}}/astronomers/">Astronomers</a>
+        <a href="{{ .Site.Home.Permalink}}/deployers/">Deployers</a>
+        <a href="{{ .Site.Home.Permalink}}/members/">Members</a>
+        <a href="{{ .Site.Home.Permalink}}/about/">About</a>
     </nav>
 </header>
