Set a maximu m size for images (not bigger than its container width)

--- a/static/css/ivoa.css
+++ b/static/css/ivoa.css
@@ -37,6 +37,8 @@ a {
 }
 a:hover { text-decoration: underline }
 
+img { max-width: 100% }
+
 article {
     max-width: 80em;
     margin: 2em auto;
