--- a/static/css/ivoa.css
+++ b/static/css/ivoa.css
@@ -21,6 +21,7 @@ body {
 
 h1, h2, h3 {
     color: #012647;
+    clear: both;
 }
 
 body > main > article > header > h1 {
@@ -405,3 +406,19 @@ section > main.carrousel {
 .sitemap .card:nth-child(1) > .card-title { border-bottom-color: #5dbbf5 }
 .sitemap .card:nth-child(2) > .card-title { border-bottom-color: #399110 }
 .sitemap .card:nth-child(3) > .card-title { border-bottom-color: #aa3f3f }
+
+
+/* =============================================================================
+   FLOATING
+ */
+
+.floating {
+    margin: 1em;
+    margin-top: 0;
+}
+.floating.left  { float: left ; margin-left: 0; }
+.floating.right { float: right; margin-right: 0; }
+
+.floating > img {
+    max-width: 30vw;
+}
