Add shortcodes for <sup> and <sub> + update 'with-image' for a nicer layout than the 'floating' shortcode in newsletter

--- a/layouts/shortcodes/side-image.html
+++ b/layouts/shortcodes/side-image.html
@@ -1,3 +1,13 @@
+{{- if (.Get "floating" )}}
+<section class="with-image is-floating">
+    {{- if (.Get "thumbnail") }}
+        <a class="floating {{ .Get "position" }}" href="{{ .Get "image" }}"><img src="{{- .Get "thumbnail" }}" /></a>
+    {{- else }}
+        <img class="floating {{ .Get "position" }}" src="{{- .Get "image" }}" />
+    {{- end }}
+    {{- .Inner | markdownify }}
+</section>
+{{- else }}
 <section class="with-image {{ .Get "position" }}">
     <aside>
     {{- if (.Get "thumbnail") }}
@@ -10,3 +20,4 @@
         {{- .Inner | markdownify }}
     </main>
 </section>
+{{- end }}
