--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,6 +4,7 @@
         <span>International Virtual<br/>Observatory Alliance</span>
     </a>
     <nav>
+        <a href="{{ .Site.Home.Permalink}}/search/">Search</a>
         <a href="{{ .Site.Home.Permalink}}">Home</a>
         <a href="{{ .Site.Home.Permalink}}/astronomers/">Astronomers</a>
         <a href="{{ .Site.Home.Permalink}}/deployers/">Deployers</a>
