--- a/layouts/shortcodes/search-pages.html
+++ b/layouts/shortcodes/search-pages.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/search-pages.css">
+<link rel="stylesheet" href="../css/search-pages.css">
 
 <div class="search-container" data-pagefind-ignore>
     <div class="search-form">
@@ -11,4 +11,4 @@
     </div>
 </div>
 
-<script src="/js/search.js"></script>
+<script src="../js/search.js"></script>
