Improve rendering of the Search menu item and of the text before the search input element.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,11 +4,11 @@
         <span>International Virtual<br/>Observatory Alliance</span>
     </a>
     <nav>
-        <a href="{{ .Site.Home.Permalink}}/search/">Search</a>
         <a href="{{ .Site.Home.Permalink}}">Home</a>
         <a href="{{ .Site.Home.Permalink}}/astronomers/">Astronomers</a>
         <a href="{{ .Site.Home.Permalink}}/deployers/">Deployers</a>
         <a href="{{ .Site.Home.Permalink}}/members/">Members</a>
         <a href="{{ .Site.Home.Permalink}}/about/">About</a>
+        <a class="search" href="{{ .Site.Home.Permalink}}/search/">Search</a>
     </nav>
 </header>
