Change newsletter anchor text and remove extra slashes from sitemap links

--- a/layouts/partials/sitemap.html
+++ b/layouts/partials/sitemap.html
@@ -7,16 +7,16 @@
             <div class="card-list">
                 <ul>
                     <li>
-                        <a href="{{ .Site.Home.Permalink}}/about/what_is_vo/">
+                        <a href="{{ .Site.Home.Permalink}}about/what_is_vo/">
                         What is the VO?
                         </a>
                     </li>
-                    <li><a href="{{ .Site.Home.Permalink}}/about/what_is_ivoa/">What is the IVOA?</a></li>
-                    <li><a href="{{ .Site.Home.Permalink}}/about/member-organizations/">Who is involved?</a></li>
-                    <li><a href="{{ .Site.Home.Permalink}}/about/roadmap/">Accomplishments and future plans</a></li>
-                    <li><a href="{{ .Site.Home.Permalink}}/about/contacts/">How do I contact the IVOA?</a></li>
-                    <li><a href="{{ .Site.Home.Permalink}}/about/participation/">How can I participate?</a></li>
-                    <li><a href="{{ .Site.Home.Permalink}}/members/working-groups/IVOA_Code_of_Conduct.pdf">Code of Conduct</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}about/what_is_ivoa/">What is the IVOA?</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}about/member-organizations/">Who is involved?</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}about/roadmap/">Accomplishments and future plans</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}about/contacts/">How do I contact the IVOA?</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}about/participation/">How can I participate?</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}members/working-groups/IVOA_Code_of_Conduct.pdf">Code of Conduct</a></li>
                 </ul>
             </div>
         </div>
@@ -26,12 +26,12 @@
 
             <div class="card-list">
                 <ul>
-                    <li><a href="{{ .Site.Home.Permalink}}/astronomers/getting_started/">Getting Started</a></li>
-                    <li><a href="{{ .Site.Home.Permalink}}/astronomers/using_the_vo/">Using the VO</a></li>
-                    <li><a href="{{ .Site.Home.Permalink}}/astronomers/vo_glossary/">VO Glossary</a></li>
-                    <li><a href="{{ .Site.Home.Permalink}}/astronomers/applications/">VO Applications</a></li>
-                    <li><a href="{{ .Site.Home.Permalink}}/newsletter/">IVOA newsletter</a></li>
-                    <li><a href="{{ .Site.Home.Permalink}}/astronomers/vo_for_public/">VO for Students & Public</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}astronomers/getting_started/">Getting Started</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}astronomers/using_the_vo/">Using the VO</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}astronomers/vo_glossary/">VO Glossary</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}astronomers/applications/">VO Applications</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}newsletter/">IVOA Newsletters</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}astronomers/vo_for_public/">VO for Students & Public</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +41,7 @@
 
             <div class="card-list">
                 <ul>
-                    <li><a href="{{ .Site.Home.Permalink}}/deployers/intro_to_vo_concepts">Intro to VO Concepts</a></li>
+                    <li><a href="{{ .Site.Home.Permalink}}deployers/intro_to_vo_concepts">Intro to VO Concepts</a></li>
                     <li><a href="https://www.ivoa.net/documents/">IVOA Standards</a></li>
                     <li><a href="http://wiki.ivoa.net/twiki/bin/view/IVOA/PublishingInTheVONew">Guide to Publishing in the VO</a></li>
                     <li><a href="http://wiki.ivoa.net/twiki/bin/view/IVOA/VOGlossary">Technical Glossary</a></li>
