--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,9 +1,10 @@
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="{{ .Site.Home.Permalink}}/css/fa.min.css">
     <link rel="stylesheet" href="{{ .Site.Home.Permalink}}/css/ivoa.css">
+    <link href="{{ "css/tailwind.css" | resources.Get | css.PostCSS | resources.Minify | relURL }}" rel="stylesheet">
 
     <title>IVOA.net - International Virtual Observatory Alliance</title>
 </head>
