Updated settings, added a node app package for tooling, tailwind works

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,4 +1,13 @@
 @tailwind base;
-@tailwind colors;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    a {
+        @apply text-secondary hover:text-secondary/80 hover:underline hover:decoration-1;
+    }
+    p {
+        @apply text-justify;
+    }
+}
+
