--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,8 +4,8 @@
         <div class="hidden md:flex flex-col">
             <!-- First Row -->
             <div class="flex items-center h-20">
-                <img src="/images/ivoa_logo.png" alt="IVOA Logo" class="h-12 w-auto mr-4">
-                <span class="text-white text-xl lg:text-2xl">International Virtual Observatory Alliance</span>
+                <img src="/images/ivoa_logo.png" alt="IVOA Logo" class="h-14 w-auto mr-4">
+                <span class="text-white text-2xl lg:text-2xl">International Virtual Observatory Alliance</span>
             </div>
 
             <!-- Second Row -->
@@ -25,8 +25,8 @@
         <div class="md:hidden">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center space-x-3">
-                    <img src="/images/ivoa_logo.png" alt="IVOA Logo" class="h-10 w-auto">
-                    <span class="text-white text-xs">International Virtual Observatory Alliance</span>
+                    <img src="/images/ivoa_logo.png" alt="IVOA Logo" class="h-12 w-auto">
+                    <span class="text-white text-xlg">International Virtual Observatory Alliance</span>
                 </div>
                 <button
                         type="button"
